# A-Benchmark-for-Rough-Sketch-Cleanup

./: .gitignore  Pipfile  README.md  cfg.yaml  pyproject.toml  requirements.txt  run_benchmark.py
html_generator/css/: style.css  table.css
html_generator/js/: auto.js  gt-to-gt.js  gt.js  my.js  rough.js  sketch.js
html_generator/pkg/: package-lock.json  package.json
html_generator/script/: generate_html_pages.py
html_generator/template/: bib.bib  header.html  index.html
tools/: files.py  junction_quality.py  load_as_melted.py  load_vector_quality.py  metric_multiple.py  metrics.py  metrics_stroke.py  svg_arclengths_statistics.py  svg_resize.py  svg_standardize.py  thumbnails.py
